--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,34 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Dev/Sleep
-email: jan.theile@chorgo.de
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Chorgo Dev
+description: > # this means to ignore newlines until "baseurl:"
+  I'm Jan Theile, and iOS Developer, who tries to learn new stuff as much as possible.
+  Blogging about it, helps me to process the learned bits.
+permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: TheCorgo
-#github_username:  jekyll
+##site-twitter: #if your site has a twitter account, enter it here
 
-# Build settings
+# Author Settings
+author: Jan Theile # add your name
+author-img: jantheile.jpg # add your photo
+about-author: I'm an iOS Developer, trying to learn new stuff every day and blog from time to time about it. # add description
+twitter: TheChorgo # add your Twitter handle
+linkedin: jantheile # add your Linkedin handle
+email: jan.theile@chorgo.de # add your Email address
+
+# Disqus
+discus-identifier: chorgo # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
+plugins_dir:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+paginate: 12
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
