--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: jan.theile@chorgo.de # add your Email address
 discus-identifier: chorgo # add your discus identifier
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-110091161-1 # Google Analytics
 
 # Build Settings
 markdown: kramdown
