Added publish and w3.css

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-node_modules/
-.cache/
-public/
-npm-debug.log
-.eslintcache
-.gatsby-context.js
-.idea
-gatsby-starter-lumen.iml
-yarn.lock
 .DS_Store
+/build
+/.build
+/.swiftpm
+/*.xcodeproj
+.publish
